--- a/ci-cd-pipeline-jenkins-sonarqube/spring-petclinic-ci-cd/pom.xml
+++ b/ci-cd-pipeline-jenkins-sonarqube/spring-petclinic-ci-cd/pom.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>4.0.0</version>
   </parent>
-
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic</artifactId>
   <version>4.0.0-SNAPSHOT</version>
   <name>petclinic</name>
 
   <properties>
+    <!-- Generic properties -->
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <!-- Important for reproducible builds. Update using e.g. ./mvnw versions:set -DnewVersion=... -->
     <project.build.outputTimestamp>2024-11-28T14:37:52Z</project.build.outputTimestamp>
 
+    <!-- Web dependencies -->
     <webjars-locator.version>1.1.2</webjars-locator.version>
     <webjars-bootstrap.version>5.3.8</webjars-bootstrap.version>
     <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
@@ -43,7 +41,7 @@
   </licenses>
 
   <dependencies>
-    <!-- Spring Boot Dependencies -->
+    <!-- Spring and Spring Boot dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
@@ -78,7 +76,6 @@
       <artifactId>jakarta.xml.bind-api</artifactId>
     </dependency>
 
-    <!-- Runtime Databases -->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
@@ -99,8 +96,6 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
-
-    <!-- Webjars -->
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>webjars-locator-lite</artifactId>
@@ -120,14 +115,12 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- Devtools -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
     </dependency>
 
-    <!-- Test Dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa-test</artifactId>
@@ -167,20 +160,6 @@
 
   <build>
     <plugins>
-      <!-- Disable Postgres Tests -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.5</version>
-        <configuration>
-          <excludedTests>
-            <excludedTest>PostgresIntegrationTests</excludedTest>
-            <excludedTest>*Postgres*</excludedTest>
-          </excludedTests>
-        </configuration>
-      </plugin>
-
-      <!-- Maven Enforcer -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
@@ -201,8 +180,6 @@
           </execution>
         </executions>
       </plugin>
-
-      <!-- Spring Java Format -->
       <plugin>
         <groupId>io.spring.javaformat</groupId>
         <artifactId>spring-javaformat-maven-plugin</artifactId>
@@ -216,8 +193,6 @@
           </execution>
         </executions>
       </plugin>
-
-      <!-- Checkstyle -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -251,19 +226,17 @@
           </execution>
         </executions>
       </plugin>
-
-      <!-- GraalVM Native -->
       <plugin>
         <groupId>org.graalvm.buildtools</groupId>
         <artifactId>native-maven-plugin</artifactId>
       </plugin>
-
-      <!-- Spring Boot -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <executions>
           <execution>
+            <!-- Spring Boot Actuator displays build-related information
+              if a META-INF/build-info.properties file is present -->
             <goals>
               <goal>build-info</goal>
             </goals>
@@ -278,8 +251,6 @@
           </execution>
         </executions>
       </plugin>
-
-      <!-- JaCoCo -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -300,7 +271,8 @@
         </executions>
       </plugin>
 
-      <!-- Git Commit ID -->
+      <!-- Spring Boot Actuator displays build-related information if a git.properties file is
+      present at the classpath -->
       <plugin>
         <groupId>io.github.git-commit-id</groupId>
         <artifactId>git-commit-id-maven-plugin</artifactId>
@@ -309,8 +281,8 @@
           <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
         </configuration>
       </plugin>
-
-      <!-- CycloneDX -->
+      <!-- Spring Boot Actuator displays sbom-related information if a CycloneDX SBOM file is
+      present at the classpath -->
       <plugin>
         <?m2e ignore?>
         <groupId>org.cyclonedx</groupId>
@@ -318,14 +290,11 @@
       </plugin>
     </plugins>
   </build>
-
-  <!-- Profiles -->
   <profiles>
     <profile>
       <id>css</id>
       <build>
         <plugins>
-          <!-- Unpack Webjars -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
@@ -350,8 +319,6 @@
               </execution>
             </executions>
           </plugin>
-
-          <!-- Libsass compilation -->
           <plugin>
             <groupId>com.gitlab.haynes</groupId>
             <artifactId>libsass-maven-plugin</artifactId>
@@ -374,7 +341,6 @@
         </plugins>
       </build>
     </profile>
-
     <profile>
       <id>m2e</id>
       <activation>
@@ -385,6 +351,8 @@
       <build>
         <pluginManagement>
           <plugins>
+            <!-- This plugin's configuration is used to store Eclipse m2e settings
+              only. It has no influence on the Maven build itself. -->
             <plugin>
               <groupId>org.eclipse.m2e</groupId>
               <artifactId>lifecycle-mapping</artifactId>
@@ -440,5 +408,4 @@
       </build>
     </profile>
   </profiles>
-
 </project>
